--- a/index.html
+++ b/index.html
@@ -7,43 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS from CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- jQuery from CDN -->
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
-
-    <title>Tic Tac Toe</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h1>Tic Tac Toe</h1>
-          <hr>
-        </div>
-      </div>
-      <div class="row">
-
-        <!-- a column represents our game board -->
-        <!-- the `offset` class helps us center the board -->
-        <div class="col-md-6 col-md-offset-3" id="board">
-
-          <!-- you can put rows inside of columns! -->
-          <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
-          <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-          </div>
+    <script type="text/javascript" src="js/app.js"></script>
 
 
-
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+    <h1>
+  Tic Tac Toe
+</h1>
+<div class="messages"></div>
+<div class="turn"></div>
+<table>
+  <tr>
+    <td class="item1"></td>
+    <td class="item2"></td>
+    <td class="item3"></td>
+  </tr>
+  <tr>
+    <td class="item4"></td>
+    <td class="item5"></td>
+    <td class="item6"></td>
+  </tr>
+  <tr>
+    <td class="item7"></td>
+    <td class="item8"></td>
+    <td class="item9"></td>
+  </tr>
+</table>
+<br /><input class="reset" type="button" value="Reset" />
